Prefer List.of for Routes