@@ -30,7 +30,7 @@ public class RestMlInfoAction extends BaseRestHandler {
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
+        return org.elasticsearch.common.collect.List.of(
             new ReplacedRoute(GET, BASE_PATH + "info",
                 GET, PRE_V7_BASE_PATH + "info")
         );
