@@ -30,7 +30,7 @@ public class RestSetUpgradeModeAction extends BaseRestHandler {
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
+        return org.elasticsearch.common.collect.List.of(
             new ReplacedRoute(POST, BASE_PATH + "set_upgrade_mode",
                 POST, PRE_V7_BASE_PATH + "set_upgrade_mode")
         );
