@@ -32,7 +32,7 @@ public class RestDeleteCalendarJobAction extends BaseRestHandler {
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
+        return org.elasticsearch.common.collect.List.of(
             new ReplacedRoute(DELETE, BASE_PATH + "calendars/{" + Calendar.ID.getPreferredName() + "}/jobs/{" +
                 Job.ID.getPreferredName() + "}",
                 DELETE, PRE_V7_BASE_PATH + "calendars/{" + Calendar.ID.getPreferredName() + "}/jobs/{" +
