@@ -14,7 +14,6 @@ import org.elasticsearch.xpack.core.ml.action.PostDataAction;
 import org.elasticsearch.xpack.core.ml.job.config.Job;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -35,7 +34,7 @@ public class RestPostDataAction extends BaseRestHandler {
     public List<DeprecatedRoute> deprecatedRoutes() {
         final String msg = "Posting data directly to anomaly detection jobs is deprecated, " +
             "in a future major version it will be compulsory to use a datafeed";
-        return Arrays.asList(
+        return org.elasticsearch.common.collect.List.of(
             new DeprecatedRoute(POST, BASE_PATH + "anomaly_detectors/{" + Job.ID.getPreferredName() + "}/_data", msg),
             new DeprecatedRoute(POST, PRE_V7_BASE_PATH + "anomaly_detectors/{" + Job.ID.getPreferredName() + "}/_data",
                 msg));
