@@ -31,7 +31,7 @@ public class RestValidateDetectorAction extends BaseRestHandler {
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
+        return org.elasticsearch.common.collect.List.of(
             new ReplacedRoute(POST, BASE_PATH + "anomaly_detectors/_validate/detector",
                 POST, PRE_V7_BASE_PATH + "anomaly_detectors/_validate/detector")
         );
